--- a/src/main/resources/templates/thymeleaf/purchase/purchaseList.html
+++ b/src/main/resources/templates/thymeleaf/purchase/purchaseList.html
@@ -6,9 +6,16 @@
 </head>
 <body>
 <table width="800" align="center">
-   <tr><td>주문일(결제번호)</td> 
-      <td>상품명/주문번호</td> 
-      <td>주문상태</td> 
+   <tr>
+      <td>주문번호 / 결제번호</td><td>상품사진</td><td>상품명</td><td> 주문상태 </td>
+   </tr>
+   <tr th:each="orderListDTO : ${list}">
+      <td>[[${#dates.format(orderListDTO.purchaseDTO.purchaseDate, 'yyyy-MM-dd')}]] / 결제번호</td>
+      <th:block th:each="PurchaseListGoodsDTO : ${orderListDTO.purchaseListGoodsDTOs}">
+         <td><img th:src="|/static/upload/${PurchaseListGoodsDTO.goodsDTO.goodsMainStoreImage}|" width="30" /></td>
+         <td>[[${PurchaseListGoodsDTO.goodsDTO.purchaseNum}]]</td>
+      </th:block>
+      <td>[[${orderListDTO.purchaseDTO.purchaseStatus}]]</td>
    </tr>
 </table>
 </body>
